@@ -28,6 +28,13 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     assert_equivalent [posts(:jonathan_sky), posts(:sam_flowers)], Post.find_tagged_with(['Very good', 'Nature'], :match_all => true)
   end
   
+  def test_include_tags_on_find_tagged_with
+    assert_nothing_raised do
+      Photo.find_tagged_with('Nature', :include => :tags)
+      Photo.find_tagged_with("Nature", :include => { :taggings => :tag })
+    end
+  end
+  
   def test_basic_tag_counts_on_class
     assert_tag_counts Post.tag_counts, :good => 2, :nature => 5, :question => 1, :bad => 1
     assert_tag_counts Photo.tag_counts, :good => 1, :nature => 3, :question => 1, :bad => 1, :animal => 3
@@ -68,64 +75,53 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     assert_tag_counts users(:jonathan).posts.tag_counts(:at_most => 2), :good => 1, :question => 1
   end
   
-  def test_tag_list
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
-    assert_equivalent Tag.parse('Bad, "Crazy animal"'), Tag.parse(photos(:jonathan_bad_cat).tag_list)
+  def test_tag_list_reader
+    assert_equivalent ["Very good", "Nature"], posts(:jonathan_sky).tag_list.names
+    assert_equivalent ["Bad", "Crazy animal"], photos(:jonathan_bad_cat).tag_list.names
   end
   
   def test_reassign_tag_list
-    assert_equivalent Tag.parse('Nature, Question'), Tag.parse(posts(:jonathan_rain).tag_list)
-    assert posts(:jonathan_rain).update_attributes(:tag_list => posts(:jonathan_rain).tag_list)
-    assert_equivalent Tag.parse('Nature, Question'), Tag.parse(posts(:jonathan_rain).tag_list)
+    assert_equivalent ["Nature", "Question"], posts(:jonathan_rain).tag_list.names
+    posts(:jonathan_rain).taggings.reload
+    
+    # Only an update of the posts table should be executed
+    assert_queries 1 do
+      posts(:jonathan_rain).update_attributes!(:tag_list => posts(:jonathan_rain).tag_list.to_s)
+    end
+    
+    assert_equivalent ["Nature", "Question"], posts(:jonathan_rain).tag_list.names
   end
   
-  def test_assign_new_tags
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
-    assert posts(:jonathan_sky).update_attributes(:tag_list => "#{posts(:jonathan_sky).tag_list}, One, Two")
-    assert_equivalent Tag.parse('"Very good", Nature, One, Two'), Tag.parse(posts(:jonathan_sky).tag_list)
-  end
-  
-  def test_duplicate_tags_ignored
-    assert posts(:jonathan_sky).update_attributes(:tag_list => "Test, Test")
-    assert_equal "Test", posts(:jonathan_sky).tag_list
-    assert posts(:jonathan_sky).update_attributes(:tag_list => "Test, Test, Test")
-    assert_equal "Test", posts(:jonathan_sky).reload.tag_list
+  def test_new_tags
+    assert_equivalent ["Very good", "Nature"], posts(:jonathan_sky).tag_list.names
+    posts(:jonathan_sky).update_attributes!(:tag_list => "#{posts(:jonathan_sky).tag_list}, One, Two")
+    assert_equivalent ["Very good", "Nature", "One", "Two"], posts(:jonathan_sky).tag_list.names
   end
   
   def test_remove_tag
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
-    assert posts(:jonathan_sky).update_attributes(:tag_list => "Nature")
-    assert_equivalent Tag.parse('Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
+    assert_equivalent ["Very good", "Nature"], posts(:jonathan_sky).tag_list.names
+    posts(:jonathan_sky).update_attributes!(:tag_list => "Nature")
+    assert_equivalent ["Nature"], posts(:jonathan_sky).tag_list.names
   end
   
   def test_remove_and_add_tag
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
-    assert posts(:jonathan_sky).update_attributes(:tag_list => "Nature, Beautiful")
-    assert_equivalent Tag.parse('Nature, Beautiful'), Tag.parse(posts(:jonathan_sky).tag_list)
+    assert_equivalent ["Very good", "Nature"], posts(:jonathan_sky).tag_list.names
+    posts(:jonathan_sky).update_attributes!(:tag_list => "Nature, Beautiful")
+    assert_equivalent ["Nature", "Beautiful"], posts(:jonathan_sky).tag_list.names
   end
   
   def test_tags_not_saved_if_validation_fails
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
-    assert !posts(:jonathan_sky).update_attributes(:tag_list => "One Two", :text => "")
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(Post.find(posts(:jonathan_sky).id).tag_list)
+    assert_equivalent ["Very good", "Nature"], posts(:jonathan_sky).tag_list.names
+    assert !posts(:jonathan_sky).update_attributes(:tag_list => "One, Two", :text => "")
+    assert_equivalent ["Very good", "Nature"], Post.find(posts(:jonathan_sky).id).tag_list.names
   end
   
   def test_tag_list_accessors_on_new_record
     p = Post.new(:text => 'Test')
     
-    assert_equal "", p.tag_list
+    assert p.tag_list.blank?
     p.tag_list = "One, Two"
-    assert_equal "One, Two", p.tag_list
-  end
-  
-  def test_read_tag_list_with_commas
-    assert ["Question, Crazy animal", "Crazy animal, Question"].include?(photos(:jonathan_questioning_dog).tag_list)
-  end
-  
-  def test_read_tag_list_with_alternative_delimiter
-    Tag.delimiter = " "
-    
-    assert ['Question "Crazy animal"', '"Crazy animal" Question'].include?(photos(:jonathan_questioning_dog).tag_list)
+    assert_equal "One, Two", p.tag_list.to_s
   end
   
   def test_clear_tag_list_with_nil
@@ -136,7 +132,6 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     assert p.tag_list.blank?
     
     assert p.reload.tag_list.blank?
-    assert Photo.find(p.id).tag_list.blank?
   end
   
   def test_clear_tag_list_with_string
@@ -147,7 +142,6 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     assert p.tag_list.blank?
     
     assert p.reload.tag_list.blank?
-    assert Photo.find(p.id).tag_list.blank?
   end
   
   def test_tag_list_reset_on_reload
@@ -158,17 +152,10 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     assert !p.reload.tag_list.blank?
   end
   
-  def test_include_tags_on_find_tagged_with
-    assert_nothing_raised do
-      Photo.find_tagged_with('Nature', :include => :tags)
-      Photo.find_tagged_with("Nature", :include => { :taggings => :tag })
-    end
-  end
-  
   def test_tag_list_populated_when_cache_nil
     assert_nil posts(:jonathan_sky).cached_tag_list
     posts(:jonathan_sky).save!
-    assert_equal posts(:jonathan_sky).tag_list, posts(:jonathan_sky).cached_tag_list
+    assert_equal posts(:jonathan_sky).tag_list.to_s, posts(:jonathan_sky).cached_tag_list
   end
   
   def test_cached_tag_list_used
@@ -176,13 +163,13 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     posts(:jonathan_sky).reload
     
     assert_no_queries do
-      assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).tag_list)
+      assert_equivalent ["Very good", "Nature"], posts(:jonathan_sky).tag_list.names
     end
   end
   
   def test_cached_tag_list_not_used
-    # Load column information and fixture
-    posts(:jonathan_sky)
+    # Load fixture and column information
+    posts(:jonathan_sky).taggings(:reload)
     
     assert_queries 1 do
       # Tags association will be loaded
@@ -193,10 +180,22 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
   def test_cached_tag_list_updated
     assert_nil posts(:jonathan_sky).cached_tag_list
     posts(:jonathan_sky).save!
-    assert_equivalent Tag.parse('"Very good", Nature'), Tag.parse(posts(:jonathan_sky).cached_tag_list)
+    assert_equal TagList.from('"Very good", Nature'), TagList.from(posts(:jonathan_sky).cached_tag_list)
     posts(:jonathan_sky).update_attributes!(:tag_list => "None")
     
     assert_equal 'None', posts(:jonathan_sky).cached_tag_list
     assert_equal 'None', posts(:jonathan_sky).reload.cached_tag_list
+  end
+end
+
+class ActsAsTaggableOnSteroidsFormTest < Test::Unit::TestCase
+  fixtures :tags, :taggings, :posts, :users, :photos
+  
+  include ActionView::Helpers::FormHelper
+  
+  def test_tag_list_contents
+    fields_for :post, posts(:jonathan_sky) do |f|
+      assert_match /Very good, Nature/, f.text_field(:tag_list)
+    end
   end
 end
